--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
     compileSdkVersion 30
 
     defaultConfig {
-        applicationId "com.example.dblearning"
+        applicationId "com.example.todolistapp"
         minSdkVersion 26
         targetSdkVersion 30
         versionCode 1
